--- a/css/global-style.css
+++ b/css/global-style.css
@@ -667,7 +667,7 @@ a {
 }.mb_95 {
     margin-bottom: 95px;
 }.mb_100 {
-    /* [disabled]margin-bottom: 100px; */
+    margin-bottom: 100px;
 }
 
 /*-----margin top*/
